# Django-REST-Production-Starter-Kit

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yml  django.yml
core/: __init__.py  celery.py  tasks.py  urls.py
core/settings/: base.py  config.py  development.py  production.py
